# HPMSExtra

./: CMakeLists.txt  Man_AnimSet.dae  README.md
include/tools/: AssimpImporter.h  LightColladaImporter.h  RawData.h  RawDataParser.h  RoomImporter.h
include/tools/dae/: DaeUtils.h  LibAnimParser.h  LibEffectParser.h  LibGeometryParser.h  LibHeaderParser.h  LibMaterialParser.h  LibSkeletonParser.h  LibSkinningParser.h  LibVisualSceneParser.h  RawDataParser.h
src/: HPMS3DModelToHDATMain.cpp  HPMSRoomToHDATMain.cpp
src/test/: HPMSColladaTest.cpp
src/tools/: AssimpImporter.cpp  LightColladaImporter.cpp  RawDataParser.cpp  RoomImporter.cpp  RoomToHDATConverter.cpp
src/tools/dae/: DaeUtils.cpp  LibAnimParser.cpp  LibEffectParser.cpp  LibGeometryParser.cpp  LibHeaderParser.cpp  LibMaterialParser.cpp  LibSkeletonParser.cpp  LibSkinningParser.cpp  LibVisualSceneParser.cpp  RawDataParser.cpp
